<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PostActivity" >
    <item android:id="@+id/action_new"
          android:title="@string/action_new"
          android:orderInCategory="80"
          android:showAsAction="always"
          android:icon="@drawable/ic_action_new"/>
    <item android:id="@+id/action_insert"
          android:title="@string/action_insert"
          android:orderInCategory="100"
          android:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/action_insert_picture"
                  android:title="@string/action_insert_picture"
                  android:orderInCategory="10"
                  android:showAsAction="ifRoom"/>
            <item android:id="@+id/action_insert_location"
                  android:title="@string/action_insert_location"
                  android:orderInCategory="20"
                  android:showAsAction="ifRoom"
                  android:icon="@drawable/ic_action_place"/>
        </menu>
    </item>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:showAsAction="ifRoom"
          android:icon="@drawable/ic_action_settings"/>

</menu>
