<EditText
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        tools:context=".PostActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:gravity="start|center_vertical"
        android:ems="10"
        android:id="@+id/postTitle"
        android:layout_margin="2dp"
        android:hint="New Post"
/>

