<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences"
        android:padding="7dp"
        android:gravity="top"
        android:ems="10"
        android:id="@+id/postContent"
        android:layout_margin="2dp"
        android:hint="@string/post_content_hint"
        android:background="@null"
        android:imeOptions="flagNoExtractUi"
        />
    </ScrollView>

</RelativeLayout>